Fix dependency issues

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,23 @@
 //registry.npmjs.org/:_authToken=${NPM_TOKEN}
 
+# Use exact version matching for packages when installing
+# This helps prevent lock file conflicts
+exact=false
+
+# Enable audit levels for security
+audit-level=moderate
+
+# Automatically fix audit issues when possible
+audit-fix=true
+
+# Save packages to package.json with ^ prefix (default)
+save-prefix=^
+
+# Prefer offline packages when available
+prefer-offline=true
+
+# Progress bar
+progress=true
+
+# Fund message
+fund=false
