--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -23,7 +23,7 @@
     "body-parser": "^2.2.0",
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
-    "dotenv": "16.6.1",
+    "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.1",
     "helmet": "^8.1.0",
