Update branch name

--- a/.github/workflows/couchdb.yml
+++ b/.github/workflows/couchdb.yml
@@ -20,7 +20,7 @@ jobs:
             ${{ runner.OS }}-
 
       - name: Set up CouchDB
-        uses: "cobot/couchdb-action@master"
+        uses: "cobot/couchdb-action@main"
         with:
           couchdb version: "2.3.1"
 
