Deprecating react couch & pouch libraries

--- a/packages/react-couchdb-authentication/package.json
+++ b/packages/react-couchdb-authentication/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@stanlemon/react-couchdb-authentication",
   "version": "0.10.31",
+  "deprecated": true,
   "description": "React component for authenticating against a CouchDB user db and syncing it locally with PouchDB.",
   "keywords": [
     "react",
