--- a/apps/react-pouchdb-example/package.json
+++ b/apps/react-pouchdb-example/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@stanlemon/react-pouchdb-example",
   "version": "0.3.32",
+  "deprecated": true,
   "description": "A react app using pouchdb built in typescript",
   "author": "Stan Lemon <stanlemon@users.noreply.github.com",
   "license": "MIT",
