--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@stanlemon/cli",
   "version": "0.1.30",
+  "deprecated": true,
   "description": "A command tool to make all of my things easier.",
   "author": "Stan Lemon <stanlemon@users.noreply.github.com>",
   "license": "MIT",
