Switch to vitetest

--- a/apps/hello-world/package.json
+++ b/apps/hello-world/package.json
@@ -11,7 +11,8 @@
     "tsc": "tsc",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "test": "jest"
+    "test": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "engines": {
     "node": ">=22.15.1"
