--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "prepare": "husky",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "test": "npm run build && jest --detectOpenHandles --silent",
-    "test:watch": "npm run build && jest --silent -w",
-    "test:coverage": "npm run build && jest --silent --coverage",
+    "test": "npm run build && vitest run --silent",
+    "test:watch": "npm run build && vitest --silent",
+    "test:coverage": "npm run build && vitest run --silent --coverage",
     "clean": "npm run clean --workspaces --if-present",
     "build": "npm run build --workspaces --if-present",
     "tsc": "npm run tsc --workspaces --if-present",
