--- a/packages/webdev/package.json
+++ b/packages/webdev/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@stanlemon/webdev",
-  "version": "0.2.52",
+  "version": "1.0.0",
   "description": "My typical web development setup, but without all the copy and paste.",
   "keywords": [
     "webpack",
     "babel",
-    "jest",
+    "vitest",
     "react"
   ],
   "author": "Stan Lemon <stanlemon@users.noreply.github.com>",
@@ -18,7 +18,8 @@
     "build": "WEBDEV_ENTRY=./example.tsx webpack build",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "test": "jest",
+    "test": "vitest run",
+    "test:coverage": "vitest run --coverage",
     "tsc": "tsc"
   },
   "dependencies": {
@@ -30,27 +31,26 @@
     "@babel/preset-typescript": "^7.27.1",
     "@peculiar/webcrypto": "^1.5.0",
     "@stanlemon/eslint-config": "*",
-    "@testing-library/jest-dom": "^6.6.4",
-    "babel-jest": "^30.0.5",
+    "@vitest/coverage-v8": "^2.1.8",
+    "@vitest/ui": "^2.1.8",
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
     "dotenv": "^17.2.1",
     "html-webpack-plugin": "^5.6.3",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^30.0.5",
-    "jest-environment-jsdom": "^30.0.5",
+    "jsdom": "^25.0.1",
     "less": "^4.4.0",
     "less-loader": "^12.3.0",
     "react-refresh": "^0.17.0",
     "style-loader": "^4.0.0",
     "typescript": "^5.8.3",
+    "vitest": "^2.1.8",
     "webpack": "^5.100.2",
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
   },
   "devDependencies": {
-    "@types/jest": "30.0.0",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
     "@types/webpack": "5.28.5",
