--- a/packages/webdev/tsconfig.json
+++ b/packages/webdev/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": [
       "ESNext",
       "DOM",
+      "DOM.Iterable"
     ],
     "declaration": true,
     "declarationMap": true,
@@ -14,11 +15,22 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": true,
     "module": "ESNext",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "react-jsx"
-  }
+    "jsx": "react-jsx",
+    "skipLibCheck": true
+  },
+  "include": [
+    "*.ts",
+    "*.tsx",
+    "**/*.ts",
+    "**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "build"
+  ]
 }
