--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stanlemon/eslint-config",
-  "version": "3.0.46",
+  "version": "4.0.0",
   "description": "My typical eslint setup, but without all the copy and paste.",
   "keywords": [
     "eslint"
@@ -12,10 +12,7 @@
   },
   "type": "module",
   "exports": {
-    ".": {
-      "require": "./eslint.config.cjs",
-      "import": "./eslint.config.mjs"
-    }
+    ".": "./eslint.config.js"
   },
   "scripts": {
     "lint": "eslint .",
@@ -23,16 +20,16 @@
   },
   "dependencies": {
     "@eslint/js": "^9.31.0",
+    "@vitest/eslint-plugin": "^1.3.4",
     "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-config-react": "^1.1.7",
     "eslint-config-typescript": "^3.0.0",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-jest": "^29.0.1",
-    "eslint-plugin-jest-dom": "^5.5.0",
     "eslint-plugin-prettier": "^5.5.3",
     "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-testing-library": "^7.6.3",
     "globals": "^16.3.0",
     "prettier": "^3.6.2",
     "typescript": "^5.8.3",
