chore(renovate): group node updates

--- a/renovate.json5
+++ b/renovate.json5
@@ -219,6 +219,8 @@
       // Exclude my own packages (handled separately)
       matchPackageNames: [
         '!/^@stanlemon\\//',
+        '!/^@types\\/node$/',
+        '!/^node$/',
       ],
     },
   ],
