chore(renovate): group node updates (#337)

--- a/renovate.json5
+++ b/renovate.json5
@@ -248,6 +248,8 @@
       // Exclude my own packages (handled separately)
       matchPackageNames: [
         '!/^@stanlemon\\//',
+        '!/^@types\\/node$/',
+        '!/^node$/',
       ],
       automerge: true,
     },
