--- a/renovate.json5
+++ b/renovate.json5
@@ -17,7 +17,7 @@
     'group:jestPlusTypes', // Group Jest with its types
     'group:jestPlusTSJest', // Group Jest with TypeScript Jest
     'group:dropwizardMonorepo', // Group Dropwizard packages
-    'group:springMonorepo',
+    'group:springBoot', // Group Spring Boot packages
   ],
 
   // Version management strategies
